# revisal

./: Cargo.toml  README.md  README_en.md  USED_CONTENT.txt  calendar.css  calendar.js  card_stack  card_stack.js  cards.css  cards.html  create-card.css  create-card.html  dashboard.css  dashboard.html  developers.html  empty.css  footerpages.css  form.css  index.css  index.html  justfile  login.html  main.css  materials.html  progress.js  question_session.html  questions.css  reigster.html  script.js
.cargo/: config.toml
NOIT/: USED_CONTENT.txt  form.css  index.css  index.html  login.html  main.css  reigster.html
Presentation/: Revisal_presentation_reserve.pptx
css/: _reset.scss  _root.scss  main.scss
css/components/: _calendar.scss  _daily.scss  _homework.scss  _modal.scss  _navigation.scss  _schedule.scss
css/pages/: _auth.scss  _cards.scss  _dashboard.scss  _events.scss
frontend/: account.html  acount.html  calendar.html  cards.css  cards.html  common.txt  create-card.css  create-card.html  dashboard.css  dashboard.html  developers.html  dump.txt  empty.html  homework.html  index.css  index.html  login.html  materials.html  question_session.html  reigster.html  schedule.html  technologies.html
frontend/JavaScriptFiles/: calendar.js  card_stack.js  cards-difficulty.js  circular-progress-1.js  circular-progress-2.js  create-card.js  dark-light-mode.js  grade-color.js  hover-icon.js  progress-bar-normal.js
frontend/footer/: footer.css  footer.html  footer.js
frontend/images/: dashboard.html  test.css
frontend/nav-bar/: auto-width.js  nav-aside.css  nav-bar-aside.html  nav.css  nav.html  nav.js  nav_style.css
frontend/nav-bar-top/: nav-bar-top.html  nav-top.css  nav-top.js
frontend/styles/: account.css  cards.css  dark-mode.css  dashboard.css  empty.css  footerpages.css  form.css  homework.css  index.css  main-out-of-use.css  questions.css  schedule.css  test.css
frontend/template-html/: template.css  template.html
src/: app.rs  lib.rs  main.rs  state.rs
src/app/: root.rs
src/app/components/: mod.rs
src/app/components/cards/: card.rs  cardset.rs  mod.rs
src/app/components/dashboard/: calendar.rs  daily.rs  events.rs  homework.rs  mod.rs  schedule.rs
src/app/components/events/: calendarview.rs  eventlist.rs  mod.rs
src/app/components/navigation/: mod.rs  navbar.rs
src/app/pages/: auth.rs  cards.rs  dashboard.rs  events.rs  index.rs  mod.rs
src/auth/: mod.rs
src/model/: cardset.rs  event.rs  mod.rs  student.rs
